[package]
name = "bingo-fuel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
compound_duration = "1.2.1"
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version="0.4.0", features = ["cors", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "1.4.1", features = ["serde"]}
